<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".AnswerInterface1">

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="284dp"
        android:text="@string/welcome"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="357dp"
        android:layout_height="169dp"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="37dp"
        android:gravity="center"
        android:text="@string/questionContent1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/option1"
        app:layout_constraintEnd_toEndOf="@+id/option1"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/option1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/option3"
        android:layout_width="405dp"
        android:layout_height="59dp"
        android:layout_marginBottom="152dp"
        android:background="@drawable/btn_bg_selector"
        android:onClick="selected"
        android:text="@string/ques1_option3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/submit_btn"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/submit_btn"
        app:layout_constraintTop_toBottomOf="@+id/option2" />

    <Button
        android:id="@+id/option2"
        android:layout_width="409dp"
        android:layout_height="63dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_bg_selector"
        android:text="@string/ques1_option2"
        app:layout_constraintBottom_toTopOf="@+id/option3"
        app:layout_constraintEnd_toEndOf="@+id/option3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/option3"
        app:layout_constraintTop_toBottomOf="@+id/option1"
        android:onClick="selected"/>

    <Button
        android:id="@+id/option1"
        android:layout_width="409dp"
        android:layout_height="63dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_bg_selector"
        android:onClick="selected"
        android:shadowColor="#00BCD4"
        android:text="@string/ques1_option1"
        app:layout_constraintBottom_toTopOf="@+id/option2"
        app:layout_constraintEnd_toEndOf="@+id/option2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/option2"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="188dp"
        android:layout_height="68dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#DADFDF"
        android:hapticFeedbackEnabled="false"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option3"
        android:onClick="submit"/>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="188dp"
        android:layout_height="68dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#DADFDF"
        android:hapticFeedbackEnabled="false"
        android:text="next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option3"
        android:onClick="next"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/title2"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="321dp"
        android:layout_height="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="20dp"
        android:progress="20"
        app:layout_constraintBottom_toTopOf="@+id/questionTextView"
        app:layout_constraintEnd_toEndOf="@+id/questionTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/questionTextView"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        app:layout_constraintVertical_bias="0.391" />

    <TextView
        android:id="@+id/progressNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="40dp"
        android:text="1/5"
        app:layout_constraintBottom_toTopOf="@+id/questionTextView"
        app:layout_constraintEnd_toStartOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>